<resources>
    <string name="app_name">UE875Beta</string>
    <string name="select_verify_model">请选择验证模式</string>
    <string name="finger">指静脉验证</string>
    <string name="finger1">指静脉</string>
    <string name="face">人脸验证</string>
    <string name="face1">人脸</string>
    <string name="idCard">身份证验证</string>
    <string name="passWard">密码验证</string>
    <string name="fingerIdCard">指静脉+身份证验证</string>
    <string name="faceIdCard">人脸+身份证验证</string>
    <string name="fingerFace">指静脉+人脸验证</string>
    <string name="fingerPassWard">指静脉+密码验证</string>
    <string name="facePassWard">人脸+密码验证</string>
    <string name="app_test">首页测试</string>
    <string name="pw_verify_model_tip">
        手动输入密码的方式进行注册及验证!
    </string>
    <string name="name">姓名</string>
    <string name="sex">性  别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="age">用户年龄</string>
    <string name="pw_register">密码注册</string>
    <string name="pw">密码</string>
    <string name="company_name">公司名称</string>
    <string name="phone_name">手机号码</string>
    <string name="department_name">部门名称</string>
    <string name="passWard_1">输入密码</string>

    <string name="register_password">录入密码</string>
    <string name="register">注册</string>
    <string name="select_verify_method">选择注册方式</string>
    <string name="register_finer">注册指静脉</string>
    <string name="register_face">注册人脸</string>
    <string name="register_idCard">注册身份证</string>
    <string name="register_pw">注册密码</string>
    <string name="please_input_name">请填写姓名</string>
    <string name="please_input_age">请填写年龄</string>
    <string name="please_input_phone">请填写手机号</string>
    <string name="please_input_company">请输入公司名称</string>
    <string name="please_input_department">请输入部门名称</string>
    <string name="staff_no">员工工号</string>
    <string name="please_input_staff_no">请填写员工工号</string>
    <string name="please_select_sex">请选择性别</string>
    <string name="please_select_register_model">请注册验证方式</string>
    <string name="pw_verify">密码验证</string>
    <string name="finger_n_verify">指静脉验证N</string>
    <string name="finger_1_verify">指静脉验证1</string>
    <string name="card_verify">身份证验证</string>
    <string name="card">身份证</string>
    <string name="manager_set">管理员设置</string>
    <string name="please_manager_pw">请输入管理员密码:</string>
    <string name="please_verify_pw">请输入验证密码:</string>
    <string name="ask_open_face">是否启用人脸识别?</string>
    <string name="please_select_open_face">请选择是否启用人脸验证:</string>
    <string name="pw_no_eq">前后两次密码不相等</string>
    <string name="manager_add_success">管理员添加成功</string>
    <string name="manager_add_fail">管理员添加失败</string>
    <string name="please_input_pw_agin">请再次输入密码:</string>
    <string name="user_center">个人中心</string>
    <string name="user_manage">用户管理</string>
    <string name="user_register">用户注册</string>
    <string name="verify_manager_pwd">验证管理员</string>
    <string name="verify_user_pwd">验证用户密码</string>
    <string name="manager_pwd_verify_fail">管理员密码验证失败!</string>
    <string name="user_pwd_verify_fail">用户密码验证失败</string>
    <string name="user_pwd_verify_success">用户密码验证成功!</string>
    <string name="max_manager_mun">最多可注册10位管理员</string>
    <string name="manager_list">管理员列表</string>
    <string name="username_userno">用户姓名或用户工号</string>
    <string name="search_user">搜索用户</string>
    <string name="user_name">用户姓名</string>
    <string name="user_sex">用户性别</string>
    <string name="user_age">用户年龄</string>
    <string name="user_phone">用户手机号</string>
    <string name="user_section">用户部门</string>
    <string name="no_data">暂无数据</string>
    <string name="current_register_max_manager_mun">当前可最多注册的管理员人数为:</string>
    <string name="add_new_manager">新增管理员</string>
    <string name="revise">修改</string>
    <string name="revise_manager_num">修改可注册的管理员的最大数量:</string>
    <string name="revise_success">修改成功</string>
    <string name="manager_no">管理员代号</string>
    <string name="manager">管理员</string>
    <string name="please_input_active_code">请填写激活码:</string>
    <string name="et_digits">qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890</string>
    <string name="active_code">激活码</string>
    <string name="previous">上一步</string>
    <string name="please_input_pw_new">请重新输入密码</string>
    <string name="no">否</string>
    <string name="yes">是</string>
    <string name="finger_register_success">指静脉注册成功</string>
    <string name="lest_select_one_verify">请至少注册一种验证方式</string>
    <string name="set_need_verify_model">设置必须的注册模式:</string>
    <string name="finger_register">指静脉</string>
    <string name="card_register">身份证</string>
    <string name="face_register">人脸</string>
    <string name="register_success">注册成功!</string>
    <string name="please_register_pwd">请完成密码注册</string>
    <string name="please_register_finger">请完成指静脉注册</string>
    <string name="please_register_face">请完成人脸注册</string>
    <string name="please_register_card">请完成身份证注册</string>
    <string name="init_loading_data">正在初始化数据…</string>
    <string name="init_loading_data1">正在初始化数据.</string>
    <string name="init_loading_data2">正在初始化数据..</string>
    <string name="sd_name">圣点科技</string>
    <string name="init_finger_data_fail">指静脉数据初始化失败!</string>
    <string name="dont_equls_user_no">用户编号重复，请重填!</string>
    <string name="ask_user_register_msg_save">注册的信息尚未保存，是否立即保存?</string>
    <string name="ask_user_update_msg_save">修改的信息尚未保存，是否立即保存?</string>
    <string name="ask_user_register_msg_update">当前模块已注册，是否修改?</string>
    <string name="msg_tip">信息提示</string>
    <string name="menu_set">菜单设置</string>
    <string name="finer">指静脉</string>
    <string name="id_card">身份证</string>
    <string name="user_info">请完善信息</string>
    <string name="worker_no">用户工号</string>
    <string name="phone_no">手 机 号</string>
    <string name="section_name">部门名称</string>
    <string name="verify_set">验证设置</string>
    <string name="verify_method">验证方式:</string>
    <string name="and">与</string>
    <string name="or">或</string>
    <string name="verify_logic">验证逻辑:</string>
    <string name="show_all_data">已经呈现全部数据</string>
    <string name="finger_registed">指静脉(已注册)</string>
    <string name="save">保存</string>
    <string name="save_success">保存成功</string>
    <string name="please_input_user_no">请填写用户工号:</string>
    <string name="please_select_verify_method">请选择您已注册过的验证方式进行身份验证!</string>
    <string name="manage_no_had">该管理员密码已存在,请重新输入</string>
    <string name="wellcom_tip">欢迎光临!</string>
    <string name="user_company">用户所在公司</string>
    <string name="user_search">用户搜索</string>
    <string name="delete_success">删除成功!</string>
    <string name="delete_manager">删除管理员</string>
    <string name="delete_user">删除用户</string>
    <string name="pw_register_repeat">密码注册重复!</string>
    <string name="user_no">工号</string>
    <string name="register_finger">已注册指静脉</string>
    <string name="has_register_face">已注册人脸</string>
    <string name="has_register_card">已注册身份证</string>
    <string name="has_register_pw">已注册密码</string>
    <string name="no_register">未注册</string>
    <string name="had_register">已注册</string>
    <string name="is_open_face">启用人脸识别:</string>
    <string name="user">用户</string>
    <string name="data">数据</string>
    <string name="my_dev">我的设备</string>
    <string name="ether_net">以太网</string>
    <string name="no_connect">未连接</string>
    <string name="connect">已连接</string>
    <string name="wlan">WLAN</string>
    <string name="server">服务器</string>
    <string name="show">显示</string>
    <string name="screen_light">屏幕亮度</string>
    <string name="screen_cover">屏保</string>
    <string name="voice">声音</string>
    <string name="dev_voice">设备声音</string>
    <string name="devModel">设备模式</string>
    <string name="server_check_model">服务器验证模式</string>
    <string name="model">模式</string>
    <string name="date_time">日期与时间</string>
    <string name="open_net_auto_check_date">开启网络自动校时</string>
    <string name="set_date">设置日期</string>
    <string name="set_time">设置时间</string>
    <string name="door_guard">门禁</string>
    <string name="open_door_guard">开启门禁</string>
    <string name="door_guard_delayed">门禁延时</string>
    <string name="open_door_guard_fail">开启门禁闭合失败警报</string>
    <string name="guard_delayed">警报延时</string>
    <string name="weigen">韦根</string>
    <string name="open_weigen">开启韦根</string>
    <string name="weigen_count">韦根位数</string>
    <string name="guard">警报</string>
    <string name="open_fanchai_guard">开启防拆警报</string>
    <string name="open_check_fail_guard">开启验证失败警报</string>
    <string name="check_fail_count">验证失败次数</string>
    <string name="other">其他</string>
    <string name="open_check_repeat">开启重复注册验证</string>
    <string name="reboot">重启</string>
    <string name="open_fix_reboot">开启定时重启</string>
    <string name="reboot_count">重启频率</string>
    <string name="reboot_time">重启时间</string>
    <string name="all_department">所有部门</string>
    <string name="department">部门</string>
    <string name="jurisdiction">权限</string>
    <string name="finger_1">左食指</string>
    <string name="finger_2">左中指</string>
    <string name="finger_3">左无名指</string>
    <string name="finger_4">右食指</string>
    <string name="finger_5">右中指</string>
    <string name="finger_6">右无名指</string>
    <string name="more_select">更多选项</string>
    <string name="dev_name">设备名称</string>
    <string name="dev_name_value">身份识别设备</string>
    <string name="dev_model">设备型号</string>
    <string name="ue_875">UE875</string>
    <string name="dev_sn">设备SN</string>
    <string name="dev_fw">设备FW</string>
    <string name="android_version">Android版本</string>
    <string name="finger_sn">指静脉模块SN</string>
    <string name="finger_fw">指静脉模块FW</string>
    <string name="reset">恢复出厂设置</string>
    <string name="system_check">系统自检</string>
    <string name="dev_pattern">设备模式</string>
    <string name="dynamic">动态</string>
    <string name="ip_address">IP地址</string>
    <string name="mask">掩码</string>
    <string name="gateway">网关</string>
    <string name="open_wlan">开启WLAN</string>
    <string name="port_no">端口号</string>
    <string name="setting">设置</string>
    <string name="enther_net">以太网</string>


</resources>
