<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AppRegisterActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_60"
            android:layout_marginBottom="@dimen/dp_20"
            android:background="@color/white"
            android:elevation="@dimen/dp_5"
            android:paddingBottom="@dimen/dp_50">

            <TextView
                android:id="@+id/userInfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_15"
                android:drawableStart="@drawable/tv_line"
                android:drawablePadding="@dimen/dp_2"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:text="@string/user_info"
                android:textColor="@color/blue_5"
                android:textSize="@dimen/sp_17"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/userNameParent"
                style="@style/manage_linear_style"
                android:layout_below="@+id/userInfoTitle">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/manage_title_style"
                    android:background="@color/red"
                    android:text="@string/name" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/nameEt"
                    style="@style/manage_et_style"
                    android:hint="@string/please_input_name"
                    android:inputType="text"
                    android:maxLength="5" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/userSexParent"
                style="@style/manage_linear_style"
                android:layout_below="@+id/userNameParent">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/manage_title_style"
                    android:background="@color/gold"
                    android:text="@string/age" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/ageEt"
                    style="@style/manage_et_style"
                    android:hint="@string/please_input_age"
                    android:inputType="number"
                    android:maxLength="3" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginEnd="@dimen/dp_70"
                    android:gravity="center"
                    android:paddingStart="@dimen/dp_10"
                    android:paddingEnd="@dimen/dp_10"
                    android:text="@string/sex"
                    android:textColor="@color/black_0"
                    android:textSize="@dimen/sp_14"
                    android:visibility="gone" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinner"
                    style="@style/spinner"
                    android:layout_marginStart="@dimen/dp_15"
                    android:entries="@array/sex"
                    android:gravity="center"
                    android:minWidth="@dimen/dp_110"
                    android:minHeight="@dimen/dp_40"
                    android:padding="@dimen/dp_2"
                    android:spinnerMode="dropdown"
                    android:theme="@style/spinnerHead" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/userNoParent"
                style="@style/manage_linear_style"
                android:layout_below="@+id/userSexParent">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/manage_title_style"
                    android:background="@color/pinkColor"
                    android:text="@string/worker_no" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/staffNoEt"
                    style="@style/manage_et_style"
                    android:hint="@string/please_input_staff_no"
                    android:inputType="number"
                    android:maxLength="16" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/userPhoneParent"
                style="@style/manage_linear_style"
                android:layout_below="@+id/userNoParent">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/manage_title_style"
                    android:background="@color/plum_4"
                    android:text="@string/phone_no" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/phoneEt"
                    style="@style/manage_et_style"
                    android:hint="@string/please_input_phone"
                    android:inputType="number"
                    android:maxLength="11" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/companyNameParent"
                style="@style/manage_linear_style"
                android:layout_below="@+id/userPhoneParent">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/manage_title_style"
                    android:background="@color/blue_8"
                    android:text="@string/company_name" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/companyNameEt"
                    style="@style/manage_et_style"
                    android:layout_width="230dp"
                    android:hint="@string/please_input_company"
                    android:inputType="text"
                    android:maxLength="20" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sectionNameParent"
                style="@style/manage_linear_style"
                android:layout_below="@+id/companyNameParent">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/manage_title_style"
                    android:background="@color/green_6"
                    android:text="@string/section_name" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/departmentEt"
                    style="@style/manage_et_style"
                    android:hint="@string/please_input_department"
                    android:inputType="text"
                    android:maxLength="16" />

            </LinearLayout>

            <TextView
                android:id="@+id/verifyMethodTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sectionNameParent"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_15"
                android:drawableStart="@drawable/tv_line"
                android:drawablePadding="@dimen/dp_2"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:text="@string/select_verify_method"
                android:textColor="@color/blue_5"
                android:textSize="@dimen/sp_17"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/verifyMethodTitle"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/fingerModel"
                        style="@style/manage_register_style"
                        android:drawableTop="@drawable/ic_finger"
                        android:text="@string/finer" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/faceModel"
                        style="@style/manage_register_style"
                        android:drawableTop="@drawable/ic_face"
                        android:text="@string/face1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/idCardModel"
                        style="@style/manage_register_style"
                        android:drawableTop="@drawable/ic_id_card"
                        android:text="@string/id_card" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/pwModel"
                        style="@style/manage_register_style"
                        android:drawableTop="@drawable/ic_password_verify"
                        android:text="@string/pw" />
                </LinearLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/registerBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_45"
                    android:layout_marginStart="@dimen/dp_45"
                    android:layout_marginTop="@dimen/dp_35"
                    android:background="@drawable/input_pw_bg_select"
                    android:gravity="center"
                    android:padding="@dimen/dp_5"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18"
                    android:visibility="gone" />

            </LinearLayout>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>