<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="@dimen/dp_5">

    <RelativeLayout
        android:id="@+id/userContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_5">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/userAvatar"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/dp_3"
            android:layout_marginTop="@dimen/dp_3"
            app:srcCompat="@drawable/ic_default_user_avatar" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_toEndOf="@+id/userAvatar"
            android:text="@string/user_name"
            android:textColor="@color/black_0"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/userSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_toEndOf="@+id/userName"
            android:text="@string/user_sex"
            android:textColor="@color/black_0"
            android:textSize="@dimen/sp_14" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/userAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_toEndOf="@+id/userSex"
            android:text="@string/user_age"
            android:textColor="@color/black_0"
            android:textSize="@dimen/sp_14" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/userPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userName"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_toEndOf="@+id/userAvatar"
            android:text="@string/user_phone"
            android:textColor="@color/black_0"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/userNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_toEndOf="@+id/userAge"
            android:text="@string/user_no"
            android:textColor="@color/black_0"
            android:textSize="@dimen/sp_14" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/userSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userName"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_toEndOf="@+id/userPhone"
            android:text="@string/user_section"
            android:textColor="@color/black_0"
            android:textSize="@dimen/sp_14" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/userCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userPhone"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_toEndOf="@+id/userAvatar"
            android:text="@string/user_company"
            android:textColor="@color/black_0"
            android:textSize="@dimen/sp_14" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/pwLabel"
                style="@style/managerLabelStyle"
                android:background="@drawable/pw_label_bg"
                android:text="@string/has_register_pw"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/cardLabel"
                style="@style/managerLabelStyle"
                android:background="@drawable/card_label_bg"
                android:text="@string/has_register_card"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/faceLabel"
                style="@style/managerLabelStyle"
                android:background="@drawable/face_label_bg"
                android:text="@string/has_register_face"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/fingerLabel"
                style="@style/managerLabelStyle"
                android:background="@drawable/finger_label_bg"
                android:text="@string/register_finger"
                android:visibility="gone" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_8"
        android:layout_below="@+id/userContent"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@color/common_line" />
</RelativeLayout>