<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/common_line"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/verify_method_dialog_top"
        android:paddingBottom="@dimen/dp_25">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/verifyMethodTitle"
            style="@style/checkBox_title_style"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/verify_method" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cbFinger"
            style="@style/manager_checkbox"
            android:layout_toEndOf="@+id/verifyMethodTitle"
            android:text="@string/finger_register" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cbFace"
            style="@style/manager_checkbox"
            android:layout_toEndOf="@+id/cbFinger"
            android:text="@string/face_register" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cbCard"
            style="@style/manager_checkbox"
            android:layout_toEndOf="@+id/cbFace"
            android:text="@string/card_register" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cbPw"
            style="@style/manager_checkbox"
            android:layout_toEndOf="@+id/cbCard"
            android:text="@string/pw" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/verifyLogicTitle"
            style="@style/checkBox_title_style"
            android:layout_below="@+id/verifyMethodTitle"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/verify_logic" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/verifyMethodTitle"
            android:layout_marginTop="@dimen/dp_32"
            android:layout_toEndOf="@+id/verifyLogicTitle"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radioBtn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_30"
                android:gravity="center"
                android:padding="@dimen/dp_3"
                android:text="@string/and"
                android:textColor="@color/black_0"
                android:textSize="@dimen/sp_17" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radioBtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_50"
                android:checked="true"
                android:gravity="center"
                android:padding="@dimen/dp_3"
                android:text="@string/or"
                android:textColor="@color/black_0"
                android:textSize="@dimen/sp_17" />
        </RadioGroup>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_1"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/cancelBtn"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_60"
            android:layout_weight="0.998"
            android:background="@drawable/verify_method_cancel_btn"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/black_0"
            android:textSize="@dimen/sp_17" />

        <View
            android:layout_width="@dimen/dp_0_8"
            android:layout_height="match_parent"
            android:layout_weight="0.004"
            android:background="@color/common_line" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/positiveBtn"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_60"
            android:layout_weight="0.998"
            android:background="@drawable/verify_method_positive_btn"
            android:gravity="center"
            android:text="@string/positive"
            android:textColor="@color/blue_6"
            android:textSize="@dimen/sp_17" />
    </LinearLayout>
</LinearLayout>